--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Master-Prompt-Editor CI
 
 on:
   push:
@@ -7,22 +7,36 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build_and_test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x]
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-    - name: Use Node.js
-      uses: actions/setup-node@v3
+    - name: Set up Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
       with:
-        node-version: '18.x'
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
 
-    - name: Install dependencies
+    - name: Install root dependencies
       run: npm install
 
-    - name: Lint with ESLint
-      run: npm run lint
+    - name: Install server dependencies
+      run: npm install --prefix server
 
-    - name: Test with Jest
-      run: npm test
+    - name: Install client dependencies
+      run: npm install --prefix client
+
+    - name: Lint code
+      run: npm run lint --if-present
+
+    - name: Build server
+      run: npm run build --prefix server --if-present
+
+    - name: Build client
+      run: npm run build --prefix client --if-present
