--- a/package.json
+++ b/package.json
@@ -1,53 +1,24 @@
 {
-  "name": "ai-orchestrator",
+  "name": "master-prompt-editor-monorepo",
   "version": "1.0.0",
-  "description": "The AI Orchestrator: A Master Prompt Editor and Advanced AI Toolkit for Universal Computing",
-  "main": "index.js",
+  "private": true,
+  "description": "Root for the Master-Prompt-Editor monorepo",
   "scripts": {
-    "start": "concurrently \"npm run start:server\" \"npm run start:client\"",
-    "start:client": "react-scripts start",
-    "start:server": "npm run start --prefix server",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "install:all": "npm install && npm install --prefix server && npm install --prefix client",
+    "dev": "concurrently \"npm:dev:server\" \"npm:dev:client\"",
+    "dev:server": "npm run dev --prefix server",
+    "dev:client": "npm run dev --prefix client",
+    "lint:all": "npm run lint --prefix server && npm run lint --prefix client",
+    "build:all": "npm run build --prefix server && npm run build --prefix client"
   },
-  "keywords": [
-    "AI",
-    "Prompt Engineering",
-    "Multimodal AI",
-    "AI Toolkit",
-    "Orchestration"
-  ],
-  "author": "Jon-Arve Constantine Grønsberg-Ovesen",
-  "license": "MIT",
   "devDependencies": {
-    "concurrently": "^8.2.2"
-  },
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.96",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
-    "react-router-dom": "^6.23.0"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "prettier": "^3.3.2"
   }
 }
