--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,11 +7,13 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+
+    // --- FIX: Add these lines for path aliases ---
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["../src/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
