19 file(s) updated. Review changes and commit.  > OPERATION COMPLETED.  The project exhibits several inconsistencies and incomplete implementations, primarily revolving around type definitions, file organization, and API integration within a monorepo structure. The most significant issues are: 1.  **Conflicting Frontend Implementations**: The `client/src` directory contains a mix of vanilla JavaScript/HTML/CSS files (`index.html`, `script.js`, `style.css`) that contradict the project's stated React/TypeScript setup using Vite, which relies on `public/index.html` and `src/index.tsx` as entry points. These extraneous files create confusion and are not part of the functional React application. 2.  **Inconsistent Type Definitions and Imports**: There are duplicate or incomplete `Prompt` type definitions across `src/types/ai.ts`, `src/types/prompt.ts`, `server/src/routes/promptRoutes.ts`, and `server/src/services/PromptService.ts`. The project intends to use `src/types/prompt.ts` as the canonical source for detailed prompt structures (with versions, metadata), but other files define simpler or conflicting `Prompt` interfaces or import from the wrong `types` file. Additionally, several AI-related types (`AIModelType`, `AITaskExecutionLog`, `AIWorkflow`) are used but not defined in `src/types/ai.ts`. 3.  **Incomplete API Utility**: The `src/utils/api.ts` only provides generic `get` and `post` methods, but the frontend components rely on specific API functions (e.g., `getPrompts`, `createPrompt`, `optimizePrompt`) that are not implemented. 4.  **Mismatched React Hook Usage**: The `src/hooks/usePromptManagement.ts` hook's return values do not align with what `src/pages/PromptEditor/PromptEditorPage.tsx` expects and attempts to destructure (e.g., `createPrompt`, `addVersion`, `rollbackToVersion` are used in the page but not provided by the hook). 5.  **Mock Data Incompleteness**: `server/src/data/mockPrompts.ts` contains mock data that does not fully conform to the comprehens

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,10 +29,7 @@ jobs:
         cache-dependency-path: '**/package.json'
 
     - name: Install all dependencies
-      run: |
-        npm install
-        npm install --prefix server
-        npm install --prefix client
+      run: npm run install:all
 
     - name: Lint project
       run: npm run lint:all
