--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,9 @@ jobs:
         with:
           node-version: '20.x'
           cache: 'npm'
-          # ✅ Corrected cache path to use package.json files
           cache-dependency-path: '**/package.json'
 
+      # ✅ FIX: This step installs all dependencies, including ESLint
       - name: Install all dependencies
         run: npm run install:all
 
