--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,5 @@
+# .github/workflows/ci.yml
+
 name: Master-Prompt-Editor CI
 
 on:
@@ -19,14 +21,32 @@ jobs:
         with:
           node-version: '20.x'
           cache: 'npm'
-          # ✅ FIX: Explicitly list each package.json file for robust caching
+          # Using an explicit list of package.json files for robust caching
           cache-dependency-path: |
             package.json
             client/package.json
             server/package.json
 
+      - name: Debug - List files and versions
+        run: |
+          echo "Node version: $(node --version)"
+          echo "NPM version: $(npm --version)"
+          echo "--- Files in root directory ---"
+          ls -la
+
       - name: Install all dependencies
+        # This script installs dependencies for the root, server, and client
         run: npm run install:all
+
+      - name: Debug - Verify eslint installation
+        # This step checks if the eslint command is actually available after installation
+        run: |
+          if [ -f "node_modules/.bin/eslint" ]; then
+            echo "✅ eslint binary found in node_modules/.bin/"
+          else
+            echo "❌ eslint binary NOT found. Installation likely failed."
+            exit 1
+          fi
 
       - name: Lint project
         run: npm run lint:all
