--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,6 +13,6 @@
   "include": ["src/**/*"],
   "exclude": ["node_modules"],
   "references": [
-    { "path": "../../src/types" }
+    { "path": "../src/types" }
   ]
 }
