--- a/src/types/tsconfig.json
+++ b/src/types/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": ".",
+    "rootDir": "../../src",
     "composite": true,
     "declaration": true,
     "declarationMap": true,
@@ -14,6 +14,6 @@
     "forceConsistentCasingInFileNames": true,
     "jsx": "react-jsx"
   },
-  "include": ["./**/*"],
+  "include": ["../../src/**/*"],
   "exclude": ["dist", "node_modules"]
 }
