--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@ff7abcd0c3c05ccf6adc123a8cd1fd4fb30fb493
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
         with:
           node-version: '20.x'
           cache: 'npm'
@@ -38,28 +38,28 @@ jobs:
         continue-on-error: true  # Don't fail CI on linting warnings for now
 
       - name: Upload frontend artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@b12e8abb855456ea57bf96d42692c463f0c9892e
         with:
           name: frontend-build
           path: dist/
           retention-days: 30
 
       - name: Upload server artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@b12e8abb855456ea57bf96d42692c463f0c9892e
         with:
           name: server-build
           path: server/dist/
           retention-days: 30
 
       - name: Upload client artifacts  
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@b12e8abb855456ea57bf96d42692c463f0c9892e
         with:
           name: client-build
           path: client/dist/
           retention-days: 30
 
       - name: Upload types artifacts
-        uses: actions/upload-artifact@v4  
+        uses: actions/upload-artifact@b12e8abb855456ea57bf96d42692c463f0c9892e
         with:
           name: types-build
           path: src/types/dist/
